fix the settings container displaying in the help section and set up it's z-index

--- a/public/style.scss
+++ b/public/style.scss
@@ -828,6 +828,7 @@
         position: fixed;
         top: 0;
         left: 0;
+        z-index: 9999;
       
         .settings {
           width: 450px;
